-
Bug
-
Resolution: Done
-
Not Evaluated
-
5.3.1
The following test fails:
QPointer<QProgressBar> bar = new QProgressBar; QVERIFY(!bar->parent()); { QProgressDialog dlg; QVERIFY(!dlg.isAncestorOf(bar)); dlg.setBar(bar); QVERIFY(dlg.isAncestorOf(bar)); // FAIL }
The progress bar is consequently shown as a window instead of embedded in the progress dialog. This is not what the docs say should happen.
For Gerrit Dashboard: QTBUG-40503 | ||||||
---|---|---|---|---|---|---|
# | Subject | Branch | Project | Status | CR | V |
90984,4 | QProgressDialog: fix setBar() not properly adopting the new QProgressBar | dev | qt/qtbase | Status: MERGED | +2 | 0 |